Burger overflow hidden fix

--- a/main.css
+++ b/main.css
@@ -27,6 +27,9 @@ html {
 }
 
 
+.overflow {
+    overflow: hidden;
+}
 /* --------------------------- Til toppen-knap -----------------------*/
 
 .gotopbtn {
